--- a/.travis.yml
+++ b/.travis.yml
@@ -126,6 +126,8 @@ script:
   # Building with tests and benchmarks...
   # build & run tests, build benchmarks
   - ${CABAL} v2-build $WITHCOMPILER ${TEST} ${BENCH} all
+  # Testing...
+  - ${CABAL} v2-test $WITHCOMPILER ${TEST} ${BENCH} all
   # cabal check...
   - (cd ${PKGDIR_intcode} && ${CABAL} -vnormal check)
   # haddock...
