--- a/intcode.cabal
+++ b/intcode.cabal
@@ -12,7 +12,7 @@ copyright:           2019 Eric Mertens
 build-type:          Simple
 homepage:            https://github.com/glguy/intcode
 bug-reports:         https://github.com/glguy/intcode/issues
-Tested-With:         GHC ==9.4.8, GHC ==9.6.5, GHC ==9.8.2
+Tested-With:         GHC == {9.6.6, 9.8.2, 9.10.1}
 
 description:
   Implementation of the Intcode virtual machine as defined by
@@ -42,7 +42,7 @@ library
     Intcode.Step
 
   build-depends:
-    base         >= 4.12 && < 4.20,
+    base         >= 4.12 && < 4.21,
     containers   ^>= {0.6, 0.7},
     primitive    ^>= {0.8, 0.9},
 
