--- a/intcode.cabal
+++ b/intcode.cabal
@@ -52,7 +52,7 @@ test-suite doctests
   default-language:  Haskell2010
   ghc-options:       -threaded
   build-depends:
-    base,
+    base >= 4.12 && < 4.21,
     containers,
     primitive,
     doctest ^>= 0.22,
